# whatsapp-claude-bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __main__.py  claude_client.py  config.py  conversation_manager.py  main.py  media_handler.py  models.py  voice_handler.py  whatsapp_handler.py
src/tools/: base.py  bash_tool.py  file_tool.py  mcp_tool.py  send_media_tool.py  web_search_tool.py
